[gd_scene load_steps=10 format=3 uid="uid://b16tbptxmgkat"]

[ext_resource type="FontFile" uid="uid://r38d3q1uv1mb" path="res://assets/Chewy-Regular.ttf" id="1_egax4"]
[ext_resource type="PackedScene" uid="uid://dmdpqvtgjpfae" path="res://src/fight/Screen.tscn" id="1_i02bh"]
[ext_resource type="Script" path="res://src/meta/screen.gd" id="2_n53bu"]
[ext_resource type="Texture2D" uid="uid://cdorta5gy54ms" path="res://icon.svg" id="4_20d7b"]
[ext_resource type="PackedScene" uid="uid://uw564dostwoo" path="res://src/ragdoll/amalgam_display/amalgam_display.tscn" id="4_81d8e"]
[ext_resource type="PackedScene" uid="uid://dhv7m5l6snwf7" path="res://src/upgrade/Screen.tscn" id="5_5k88p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hem84"]
bg_color = Color(0.482353, 0.0235294, 0.180392, 0.917647)
skew = Vector2(0.01, 0)
border_color = Color(0.10748, 0.10748, 0.10748, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 11
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="Theme" id="Theme_wpqe2"]
default_font = ExtResource("1_egax4")
default_font_size = 24
PanelContainer/styles/panel = SubResource("StyleBoxFlat_hem84")

[sub_resource type="LabelSettings" id="LabelSettings_54ptx"]
font_size = 36

[node name="Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_wpqe2")
script = ExtResource("2_n53bu")

[node name="ShiftingBackgrounds" type="Control" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CurrentBackground" type="TextureRect" parent="ShiftingBackgrounds"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_20d7b")
expand_mode = 1

[node name="NextBackground" type="TextureRect" parent="ShiftingBackgrounds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1

[node name="Opening" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerText" type="RichTextLabel" parent="Opening"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 258.0
offset_top = 517.0
offset_right = 322.0
offset_bottom = 549.0
mouse_filter = 2
bbcode_enabled = true
text = "[shake]You"
fit_content = true

[node name="BossText" type="RichTextLabel" parent="Opening"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 925.0
offset_top = 421.0
offset_right = 1032.0
offset_bottom = 453.0
mouse_filter = 2
bbcode_enabled = true
text = "[wave]Boss"
autowrap_mode = 0

[node name="PlayerEnd" type="Marker2D" parent="Opening"]
position = Vector2(273, 485)

[node name="BossEnd" type="Marker2D" parent="Opening"]
position = Vector2(951, 802)

[node name="Player" parent="Opening" instance=ExtResource("4_81d8e")]
offset_left = 262.0
offset_top = 1096.0
offset_right = 262.0
offset_bottom = 1096.0

[node name="Sprite2D" type="Sprite2D" parent="Opening/Player"]
texture = ExtResource("4_20d7b")
offset = Vector2(0, -64)

[node name="Boss" parent="Opening" instance=ExtResource("4_81d8e")]
offset_left = 938.0
offset_top = -212.0
offset_right = 938.0
offset_bottom = -212.0

[node name="Sprite2D2" type="Sprite2D" parent="Opening/Boss"]
texture = ExtResource("4_20d7b")
offset = Vector2(0, -64)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -79.5
offset_right = 160.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="Content" type="VBoxContainer" parent="MainMenu/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MainMenu/PanelContainer/MarginContainer/Content"]
layout_mode = 2
text = "Made of Limbs"
label_settings = SubResource("LabelSettings_54ptx")
horizontal_alignment = 1

[node name="Start" type="Button" parent="MainMenu/PanelContainer/MarginContainer/Content"]
layout_mode = 2
text = "Start"

[node name="VolumeControls" type="GridContainer" parent="MainMenu/PanelContainer/MarginContainer/Content"]
layout_mode = 2
columns = 2

[node name="MasterLabel" type="Label" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.001
value = 1.0

[node name="SfxLabel" type="Label" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effect Volume"

[node name="SfxSlider" type="HSlider" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.001
value = 1.0

[node name="MusicLabel" type="Label" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 2.0
step = 0.001
value = 1.0

[node name="Fight" parent="." instance=ExtResource("1_i02bh")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="Upgrade" parent="." instance=ExtResource("5_5k88p")]
visible = false
layout_mode = 1

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="FadeOut"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.5
offset_right = 20.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "You are... dead."

[node name="Music" type="Node" parent="."]

[node name="ActiveTrack" type="AudioStreamPlayer" parent="Music"]
bus = &"Music"

[connection signal="pressed" from="MainMenu/PanelContainer/MarginContainer/Content/Start" to="." method="_on_start_pressed"]
[connection signal="value_changed" from="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MainMenu/PanelContainer/MarginContainer/Content/VolumeControls/MusicSlider" to="." method="_on_music_slider_value_changed"]
